--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -5,7 +5,9 @@
 p {
 	height: 22px;
 	line-height: 22px;
-	padding: 4px 0 0 25px;
+	padding: 15px 0 0 40px;
+	font-size:20px;
+	font-family:"黑体";
 }
 
 .textbox {
@@ -21,4 +23,7 @@ p {
 	padding: 0 10px;
 }
 
-
+#content{
+	margin:200px 10px 10px 255px;
+	font-size:22px;
+}
